content/_generated-doc/3.40/config/quarkus-devservices-keycloak.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[.header-title]##Configuration property##
h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-enabled]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-enabled[`+++quarkus.keycloak.devservices.enabled+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.enabled+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Flag to enable (default) or disable Dev Services. When enabled, Dev Services for Keycloak automatically configures and starts Keycloak in Dev or Test mode, and when Docker is running.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_ENABLED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-image-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-image-name[`+++quarkus.keycloak.devservices.image-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.image-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The container image name for Dev Services providers. Defaults to a Quarkus-based Keycloak image. For a WildFly-based distribution, use an image like `quay.io/keycloak/keycloak:19.0.3-legacy`. Keycloak Quarkus and WildFly images are initialized differently. Dev Services for Keycloak will assume it is a Keycloak Quarkus image unless the image version ends with `-legacy`. Override with `quarkus.keycloak.devservices.keycloak-x-image`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_IMAGE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_IMAGE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|`{keycloak-image}`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-keycloak-x-image]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-keycloak-x-image[`+++quarkus.keycloak.devservices.keycloak-x-image+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.keycloak-x-image+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Indicates if a Keycloak-X image is used. By default, the image is identified by `keycloak-x` in the image name. For custom images, override with `quarkus.keycloak.devservices.keycloak-x-image`. You do not need to set this property if the default check works.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_KEYCLOAK_X_IMAGE+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_KEYCLOAK_X_IMAGE+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-shared]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-shared[`+++quarkus.keycloak.devservices.shared+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.shared+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Determines if the Keycloak container is shared. When shared, Quarkus uses label-based service discovery to find and reuse a running Keycloak container, so a second one is not started. Otherwise, if a matching container is not is found, a new container is started. The service discovery uses the `quarkus-dev-service-label` label, whose value is set by the `service-name` property. Container sharing is available only in dev mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_SHARED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_SHARED+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-service-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-service-name[`+++quarkus.keycloak.devservices.service-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.service-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The value of the `quarkus-dev-service-keycloak` label for identifying the Keycloak container. Used in shared mode to locate an existing container with this label. If not found, a new container is initialized with this label. Applicable only in dev mode.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_SERVICE_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_SERVICE_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|`+++keycloak+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-realm-path]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-realm-path[`+++quarkus.keycloak.devservices.realm-path+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.realm-path+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A comma-separated list of class or file system paths to Keycloak realm files. This list is used to initialize Keycloak. The first value in this list is used to initialize default tenant connection properties.

To learn more about Keycloak realm files, consult the link:https://www.keycloak.org/server/importExport[Importing and Exporting Keycloak Realms documentation].


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_REALM_PATH+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_REALM_PATH+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-resource-aliases-alias-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-resource-aliases-alias-name[`+++quarkus.keycloak.devservices.resource-aliases."alias-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.resource-aliases."alias-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Aliases to additional class or file system resources that are used to initialize Keycloak. Each map entry represents a mapping between an alias and a class or file system resource path.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_RESOURCE_ALIASES__ALIAS_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_RESOURCE_ALIASES__ALIAS_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-resource-mappings-resource-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-resource-mappings-resource-name[`+++quarkus.keycloak.devservices.resource-mappings."resource-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.resource-mappings."resource-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Additional class or file system resources that are used to initialize Keycloak. Each map entry represents a mapping between a class or file system resource path alias and the Keycloak container location.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_RESOURCE_MAPPINGS__RESOURCE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_RESOURCE_MAPPINGS__RESOURCE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-java-opts]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-java-opts[`+++quarkus.keycloak.devservices.java-opts+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.java-opts+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The `JAVA_OPTS` passed to the keycloak JVM


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_JAVA_OPTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_JAVA_OPTS+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-show-logs]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-show-logs[`+++quarkus.keycloak.devservices.show-logs+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.show-logs+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Show Keycloak log messages with a "Keycloak:" prefix.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_SHOW_LOGS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_SHOW_LOGS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-start-command]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-start-command[`+++quarkus.keycloak.devservices.start-command+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.start-command+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keycloak start command. Use this property to experiment with Keycloak start options, see `https://www.keycloak.org/server/all-config`. Note, it is ignored when loading legacy Keycloak WildFly images.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_START_COMMAND+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_START_COMMAND+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-features]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-features[`+++quarkus.keycloak.devservices.features+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.features+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Keycloak features. Use this property to enable one or more experimental Keycloak features. Note, if you also have to customize a Keycloak `start-command()`, you can use a `--features` option as part of the start command sequence, instead of configuring this property.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_FEATURES+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_FEATURES+++`
endif::add-copy-button-to-env-var[]
--
|list of string
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-realm-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-realm-name[`+++quarkus.keycloak.devservices.realm-name+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.realm-name+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The name of the Keycloak realm. This property is used to create the realm if the realm file pointed to by the `realm-path` property does not exist. The default value is `quarkus` in this case. It is recommended to always set this property so that Dev Services for Keycloak can identify the realm name without parsing the realm file.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_REALM_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_REALM_NAME+++`
endif::add-copy-button-to-env-var[]
--
|string
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-create-realm]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-create-realm[`+++quarkus.keycloak.devservices.create-realm+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.create-realm+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies whether to create the Keycloak realm when no realm file is found at the `realm-path`. Set to `false` if the realm is to be created using either the Keycloak Administration Console or the Keycloak Admin API provided by `io.quarkus.test.common.QuarkusTestResourceLifecycleManager`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_CREATE_REALM+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_CREATE_REALM+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-create-client]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-create-client[`+++quarkus.keycloak.devservices.create-client+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.create-client+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies whether to create the default client id `quarkus-app` with a secret `secret` and register them if the `create-realm` property is set to true. For OIDC extension configuration properties `quarkus.oidc.client.id` and `quarkus.oidc.credentials.secret` will be configured. For OIDC Client extension configuration properties `quarkus.oidc-client.client.id` and `quarkus.oidc-client.credentials.secret` will be configured. Set to `false` if clients have to be created using either the Keycloak Administration Console or the Keycloak Admin API provided by `io.quarkus.test.common.QuarkusTestResourceLifecycleManager` or registered dynamically.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_CREATE_CLIENT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_CREATE_CLIENT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++true+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-start-with-disabled-tenant]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-start-with-disabled-tenant[`+++quarkus.keycloak.devservices.start-with-disabled-tenant+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.start-with-disabled-tenant+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies whether to start the container even if the default OIDC tenant is disabled. Setting this property to true may be necessary in a multi-tenant OIDC setup, especially when OIDC tenants are created dynamically.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_START_WITH_DISABLED_TENANT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_START_WITH_DISABLED_TENANT+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-users-users]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-users-users[`+++quarkus.keycloak.devservices.users."users"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.users."users"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A map of Keycloak usernames to passwords. If empty, default users `alice` and `bob` are created with their names as passwords. This map is used for user creation when no realm file is found at the `realm-path`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_USERS__USERS_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_USERS__USERS_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-roles-role-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-roles-role-name[`+++quarkus.keycloak.devservices.roles."role-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.roles."role-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
A map of roles for Keycloak users. If empty, default roles are assigned: `alice` receives `admin` and `user` roles, while other users receive `user` role. This map is used for role creation when no realm file is found at the `realm-path`.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_ROLES__ROLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_ROLES__ROLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,List<String>>
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-port]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-port[`+++quarkus.keycloak.devservices.port+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.port+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The specific port for the dev service to listen on.

If not specified, a random port is selected.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_PORT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_PORT+++`
endif::add-copy-button-to-env-var[]
--
|int
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-container-env-environment-variable-name]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-container-env-environment-variable-name[`+++quarkus.keycloak.devservices.container-env."environment-variable-name"+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.container-env."environment-variable-name"+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Environment variables to be passed to the container.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_CONTAINER_ENV__ENVIRONMENT_VARIABLE_NAME_+++`
endif::add-copy-button-to-env-var[]
--
|Map<String,String>
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-container-memory-limit]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-container-memory-limit[`+++quarkus.keycloak.devservices.container-memory-limit+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.container-memory-limit+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Memory limit for Keycloak container, up to `Long.MAX_VALUE` bytes.

If not specified, 1250MiB is the default memory limit.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_CONTAINER_MEMORY_LIMIT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_CONTAINER_MEMORY_LIMIT+++`
endif::add-copy-button-to-env-var[]
--
|MemorySize link:#memory-size-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak[icon:question-circle[title=More information about the MemorySize format]]
|`+++1250M+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-web-client-timeout]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-web-client-timeout[`+++quarkus.keycloak.devservices.web-client-timeout+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.web-client-timeout+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The WebClient timeout. Use this property to configure how long an HTTP client used by OIDC dev service admin client will wait for a response from OpenId Connect Provider when acquiring admin token and creating realm.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_WEB_CLIENT_TIMEOUT+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_WEB_CLIENT_TIMEOUT+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak[icon:question-circle[title=More information about the Duration format]]
|`+++4S+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-disable-https]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-disable-https[`+++quarkus.keycloak.devservices.disable-https+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.disable-https+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
Specifies whether to disable HTTPS on the master realm by setting `sslRequired=NONE`. This is useful when the Keycloak container is started without HTTPS support and the master realm's default SSL requirement prevents HTTP access.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_DISABLE_HTTPS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_DISABLE_HTTPS+++`
endif::add-copy-button-to-env-var[]
--
|boolean
|`+++false+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-host-accessible-ports]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-host-accessible-ports[`+++quarkus.keycloak.devservices.host-accessible-ports+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.host-accessible-ports+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The host ports to expose to the Keycloak container. When this list is non-empty, the host is made accessible from the container using the `host.testcontainers.internal` hostname, and only the listed ports are exposed. This may be necessary when Keycloak needs to make HTTP callbacks to the application running on the host.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_HOST_ACCESSIBLE_PORTS+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_HOST_ACCESSIBLE_PORTS+++`
endif::add-copy-button-to-env-var[]
--
|list of int
|

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-access-token-lifespan]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-access-token-lifespan[`+++quarkus.keycloak.devservices.access-token-lifespan+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.access-token-lifespan+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The access token lifespan in the default realm.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_ACCESS_TOKEN_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_ACCESS_TOKEN_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak[icon:question-circle[title=More information about the Duration format]]
|`+++10M+++`

a|icon:lock[title=Fixed at build time] [[quarkus-devservices-keycloak_quarkus-keycloak-devservices-sso-session-max-lifespan]] [.property-path]##link:#quarkus-devservices-keycloak_quarkus-keycloak-devservices-sso-session-max-lifespan[`+++quarkus.keycloak.devservices.sso-session-max-lifespan+++`]##
ifdef::add-copy-button-to-config-props[]
config_property_copy_button:+++quarkus.keycloak.devservices.sso-session-max-lifespan+++[]
endif::add-copy-button-to-config-props[]


[.description]
--
The SSO session max lifespan in the default realm.


ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_KEYCLOAK_DEVSERVICES_SSO_SESSION_MAX_LIFESPAN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_KEYCLOAK_DEVSERVICES_SSO_SESSION_MAX_LIFESPAN+++`
endif::add-copy-button-to-env-var[]
--
|link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html[Duration] link:#duration-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak[icon:question-circle[title=More information about the Duration format]]
|`+++10M+++`

|===

ifndef::no-duration-note[]
[NOTE]
[id=duration-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak]
.About the Duration format
====
To write duration values, use the standard `java.time.Duration` format.
See the link:https://docs.oracle.com/en/java/javase/17/docs/api/java.base/java/time/Duration.html#parse(java.lang.CharSequence)[Duration#parse() Java API documentation] for more information.

You can also use a simplified format, starting with a number:

* If the value is only a number, it represents time in seconds.
* If the value is a number followed by `ms`, it represents time in milliseconds.

In other cases, the simplified format is translated to the `java.time.Duration` format for parsing:

* If the value is a number followed by `h`, `m`, or `s`, it is prefixed with `PT`.
* If the value is a number followed by `d`, it is prefixed with `P`.
====
endif::no-duration-note[]
ifndef::no-memory-size-note[]
[NOTE]
[id=memory-size-note-anchor-quarkus-devservices-keycloak_quarkus-keycloak]
.About the MemorySize format
====
A size configuration option recognizes strings in this format (shown as a regular expression): `[0-9]+[KkMmGgTtPpEeZzYy]?`.

If no suffix is given, assume bytes.
====
endif::no-memory-size-note[]
